--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 </select>
             </div>
             <button type="button" onclick="hitungBungaMajemuk()" class="btn btn-primary mt-3">Hitung</button>
-            <a class="btn btn-primary mt-3" href="tunggal.php">Hitung Bunga Tunggal</a>
+            <a class="btn btn-primary mt-3" href="tunggal.html">Hitung Bunga Tunggal</a>
         </form>
     </center>
 
