--- a/tunggal.html
+++ b/tunggal.html
@@ -50,6 +50,7 @@
                 </div>
             </div>
             <button type="button" onclick="hitungBunga()" class="btn btn-primary mt-3">Hitung</button>
+            <a class="btn btn-primary mt-3" href="index.html">Hitung Bunga Tunggal</a>
         </form>
     </center>
 
