--- a/index.html
+++ b/index.html
@@ -6,19 +6,41 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <title>Bunga Majemuk Calculator</title>
     <style>
+        body {
+            background-color: #27517a;
+            font-family: Arial, sans-serif;
+        }
+
         form {
-            width: 50%;
-            margin: 25px 0;
+            background: #ffffff;
+            padding: 30px;
+            border-radius: 10px;
+            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+            max-width: 500px;
+        }
+
+        .form-label {
+            font-weight: bold;
+        }
+
+        #hasil {
+            margin-top: 20px;
+        }
+
+        #hasil p {
+            margin: 0;
             font-size: 18px;
-            text-align: left;
-            justify-content: center;
-            align-items: center;
+        }
+
+        button, a {
+            width: 100%;
         }
     </style>
 </head>
 <body>
-    <center>
-        <form id="bungaForm" style="width: 50%; margin-top: 20px;">
+    <div class="d-flex justify-content-center align-items-center min-vh-100">
+        <form id="bungaForm">
+            <h3 class="text-center mb-4">Kalkulator Bunga Majemuk</h3>
             <div class="mb-3">
                 <label for="modal" class="form-label">Modal Awal (Rp)</label>
                 <input type="number" class="form-control" id="modal" required>
@@ -42,11 +64,11 @@
                 </select>
             </div>
             <button type="button" onclick="hitungBungaMajemuk()" class="btn btn-primary mt-3">Hitung</button>
-            <a class="btn btn-primary mt-3" href="tunggal.html">Hitung Bunga Tunggal</a>
+            <a class="btn btn-secondary mt-3" href="tunggal.html">Hitung Bunga Tunggal</a>
         </form>
-    </center>
 
-    <div id="hasil" style="text-align:center; margin-top:20px;"></div>
+        <div id="hasil" class="text-center mt-4"></div>
+    </div>
 
     <script>
         function hitungBungaMajemuk() {
@@ -68,7 +90,6 @@
                     break;
                 case "tahun":
                 default:
-                    // Periode sudah dalam tahun, tidak perlu diubah
                     break;
             }
 
